fix logo to be smaller on mobile so it won't overlap with hamburger menu fix circle img on homepage to be smaller on mobile

--- a/new-theme/codeitforward-fraserriverkeeper-55b4015eebad647b23000001/_navbar.scss
+++ b/new-theme/codeitforward-fraserriverkeeper-55b4015eebad647b23000001/_navbar.scss
@@ -766,6 +766,7 @@
   .navbar-brand>img
   {
     margin-top: -3px;
+    max-width: 225px;
   }
 
   .navbar-subpages
