--- a/new-theme/codeitforward-fraserriverkeeper-55b4015eebad647b23000001/theme.scss
+++ b/new-theme/codeitforward-fraserriverkeeper-55b4015eebad647b23000001/theme.scss
@@ -619,6 +619,17 @@ h6.subhead {
 		}
 	}
 
+	.content-pages-show-basic-wide
+	{
+		text-align: center;
+	}
+
+	.img-circle
+	{
+		min-width: 184px;
+		padding: 25px;
+	}
+
   .footer-items
   {
     text-align: center;
